--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
  <meta charset="UTF-8">
     <meta name="viewport"content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible"content="ie=edge">
-    <title>Main</title>
+    <title>ValenciaClub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-    <body  style="background-color:#c79f8c;">
+    <body  style="background-color:#333333;">
 
 <div class="desplazado">
-    <h1 class="red"><center>Cafetería Las Horas</center> </h1>
- 
+    <h1 class="orange"><center>Valencia Club</center> </h1>
 </div>
 
 <!--Carta-->
@@ -25,4 +24,6 @@
           
     </body>
 </html>
+
+
 
