--- a/taquillas.html
+++ b/taquillas.html
@@ -1,1 +1,16 @@
-incluir formulario para solicitar entradas
+<!DOCTYPE html>
+<html lang="es" class="html">
+<head>
+<meta charset="utf-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>ValenciaCF | Contacto</title>
+<link rel="stylesheet" href="style.css">
+</head>
+ <body  style="background-color:#333333;">
+<h2></h2>
+</div>
+<h1 class="orange">incluir formulario para solicitar entradas</h1>
+
+</body>
+</html>
