--- a/taquillas.html
+++ b/taquillas.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="es" class="html">
 <head>
-<meta charset="utf-8"/>
+ <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>ValenciaCF | Contacto</title>
-<link rel="stylesheet" href="style.css">
+  <title>Enviar una solicitud Valencia CF</title>
+  <link rel="stylesheet" href="style.css">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 </head>
- <body  style="background-color:#333333;">
-<h2></h2>
-</div>
-<h1 class="orange">incluir formulario para solicitar entradas</h1>
+<body style="background-color:#333333;">
+  <h1 class="orange">
+    Enviar una solicitud 
+  </h1>
+
+  <div class="form">
+    <form id="new_request" class="request-form" data-form="" data-form-type="request" action="/hc/es/requests" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" autocomplete="off" /><input type="hidden" name="authenticity_token" value="" />
+  <div class="orange"><label for="request_issue_type_select">Elija el motivo de su solicitud:</label>
+<select name="request[ticket_form_id]" id="request_issue_type_select" aria-label="Elija el motivo de su solicitud:" autofocus="autofocus"><option data-url="https://support.valenciacf.com/hc/es/requests/new" value="-">-</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360000437831" value="360000437831">SOCIO VCF ABONADO</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=7625786855314" value="7625786855314">SOCIO VCF</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360000505212" value="360000505212">ACCIONISTAS</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360000472431" value="360000472431">ENTRADAS</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360000454811" value="360000454811">TIENDA ONLINE</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360000435971" value="360000435971">CONSULTAS GENERALES</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360001624600" value="360001624600">INNOVATION HUB</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360001130639" value="360001130639">BUSINESS CLUB </option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360001151160" value="360001151160">HOSPITALITY</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360001130619" value="360001130619">EVENTOS</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360000783539" value="360000783539">VISITA COLEGIOS</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=360000473311" value="360000473311">VCF KIDS</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=1900000294834" value="1900000294834">SOLICITA MEET &amp; GREET: PARTIDOS VISITANTE</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=4411484134418" value="4411484134418">AMPLIACIÓN DE CAPITAL</option>
+<option data-url="https://support.valenciacf.com/hc/es/requests/new?ticket_form_id=4415268326034" value="4415268326034">TRANSMISIÓN DE DERECHOS DE SUSCRIPCIÓN PREFERENTE</option></select></div>
+
+
+  </main>
+
 
 </body>
 </html>
